<!--
  ~ Copyright (C) 2016 Álvaro Orduna León
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name">Public Apps Hub</string>

    <!-- Add app activity -->
    <string name="add_app_activity_title">New application</string>
    <string name="add_app_basic_info_title">Basic information</string>
    <string name="add_app_name">Name</string>
    <string name="add_app_description">Description</string>
    <string name="add_app_category_title">Category</string>
    <string name="add_app_category_education">Education</string>
    <string name="add_app_category_health">Health</string>
    <string name="add_app_category_transportation">Transportation</string>
    <string name="add_app_screenshot_title">Screenshots</string>
    <string name="add_app_screenshot_add">Add screenshot</string>
    <plurals name="add_app_screenshot_count">
        <item quantity="one">%d screenshot added</item>
        <item quantity="other">%d screenshots added</item>
    </plurals>
    <string name="add_app_name_error_empty">Name can not be empty</string>
    <string name="add_app_description_error_empty">Description can not be empty</string>
    <string name="add_app_permission_denied">Permission to read external storage was denied</string>
    <string name="add_app_read_screenshot_error">Error occurred while reading screenshot</string>
    <string name="add_app_progress_dialog">Uploading new app</string>
    <string name="add_app_upload_error">Unknown error occurred while uploading new app to server: %s</string>

    <!-- App list activity -->
    <string name="apps_list_no_available_data">No data available</string>

    <!-- App detail activity -->
    <string name="app_detail_screenshot_empty">No visual description available</string>
    <string name="app_detail_codes_title">Code Implementations</string>
    <string name="app_detail_codes_empty">No code implementations available</string>
    <string name="app_detail_services_title">Service Deployments</string>
    <string name="app_detail_services_empty">No service deployments available</string>
    <string name="app_detail_codes_add_button">Add</string>

    <!-- Add code activity -->
    <string name="add_code_title">Add code implementation</string>
    <string name="add_code_basic_info">Basic information</string>
    <string name="add_code_name_hint">Name</string>
    <string name="add_code_author_hint">Author</string>
    <string name="add_code_source_hint">Source code</string>
    <string name="add_code_platforms_group">Platforms</string>
    <string name="add_code_platform_web">HTML 5</string>
    <string name="add_code_platform_android">Android</string>
    <string name="add_code_platform_ios">iOS</string>
    <string name="add_code_name_error_empty">Name can not be empty</string>
    <string name="add_code_author_error_empty">Author can not be empty</string>
    <string name="add_code_source_error_empty">Source can not be empty</string>
    <string name="add_code_platforms_error_empty">Select at least one platform</string>
    <string name="add_code_unknown_error">An unknown error occurred when adding the code implementation</string>
    <string name="add_code_progress_dialog">Uploading new code implementation</string>
    <string name="add_code_upload_error">Unknown error occurred while uploading new code to server: %s</string>

    <!-- Code detail activity -->
    <string name="code_detail_services_title">Service Deployments</string>
    <string name="code_detail_services_empty">No service deployments available</string>

    <!-- Add service activity -->
    <string name="add_service_title">Add service deployment</string>
    <string name="add_service_basic_info">Basic information</string>
    <string name="add_service_name_hint">Name</string>
    <string name="add_service_name_error_empty">Name can not be empty</string>
    <string name="add_service_management_hint">Service management</string>
    <string name="add_service_management_error_empty">Service management can not be empty</string>
    <string name="add_service_url_hint">Deployment URL</string>
    <string name="add_service_url_error_empty">Deployment URL can not be empty</string>
    <string name="add_service_code_title">Associated code</string>
    <string name="add_service_geo_title">Users geographic area</string>
    <string name="add_service_progress_dialog">Uploading new service deployment</string>
    <string name="add_service_upload_error">Unknown error occurred while uploading new service to server: %s</string>

    <!-- Errors -->
    <string name="download_error">Unknown error occurred: %s</string>

</resources>
